# cw-iv-023_todo-list

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat
.github/classroom/: autograding.json
.github/workflows/: build.yml
src/: ControlWidget.cpp  ControlWidget.h  DataInput.cpp  DataInput.h  ListItemWidget.cpp  ListItemWidget.h  MainWindow.cpp  MainWindow.h  PrioritySetWidget.cpp  PrioritySetWidget.h  Task.cpp  Task.h  TaskInputWindow.cpp  TaskInputWindow.h  TodoListWidget.cpp  TodoListWidget.h  main.cpp
test/: classTask_test.cpp  dataFile_test.cpp  main.cpp
